<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad_introduce_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jlixerkun.singleapp.ActividadIntroduceDatos">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/formarte"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <com.jlixerkun.singleapp.TextoPersonalizado
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Paso1"
        android:textSize="@dimen/large_text"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_entrada"
        android:textSize="@dimen/normal_text"/>

    <EditText
        android:id="@+id/usuario"
        android:hint="@string/usuario"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"/>

    <EditText
        android:id="@+id/contrasena"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/contrasena"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"/>


    <CheckBox
        android:text="@string/acepta"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxAceptaCondiciones" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/atras"
            android:background="@drawable/btn_primary"
            android:onClick="atras"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/continuar"
            android:background="@drawable/btn_primary"
            android:onClick="continuarPaso2"/>


    </LinearLayout>


</LinearLayout>
